# industrial-c-labs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  xmake.lua
.cache/clangd/index/: alarm_list.c.F679902B807D164B.idx  alarm_list.h.5F014D6EC1F6B1EB.idx  command_queue.c.01F4D4AB8865049F.idx  command_queue.h.1FBDF534FF302842.idx  frame_parser.c.2325FB9A73860AAC.idx  frame_parser.h.B956EA689D3CA597.idx  fsm.c.4C9BB65C47FDA0BE.idx  fsm.h.6D8D0BD50D3B79F5.idx  hash_table.c.517D8B1BC2DF2FA1.idx  hash_table.h.169850043F3D3C4E.idx  modbus_slave.c.3A723180494D9F45.idx  modbus_slave.h.D6D62B18FE503378.idx  ring_buffer.c.FFA86999DAB2CBE7.idx  ring_buffer.h.C77BCB27677D41A2.idx  scheduler.c.EACE2A4F6633DA44.idx  scheduler.h.682B69968D723EAA.idx  socket_comm.c.54342E6511E5FA3B.idx  socket_comm.h.E40B2AF9F927C46A.idx  sync_buffer.c.4C942E8186C389CF.idx  sync_buffer.h.EFA86FD955CA6BF5.idx  test_alarm_list.c.BAEC4483335C1347.idx  test_command_queue.c.E774D71B672574F8.idx  test_frame_parser.c.6A2409D171615913.idx  test_framework.h.514D9913E4E38F5F.idx  test_fsm.c.8BB46A8487F1B07D.idx  test_hash_table.c.F8DDEE52585D65C5.idx  test_modbus_slave.c.E9447A86F4077ADF.idx  test_ring_buffer.c.76BAD035D15DC4E5.idx  test_scheduler.c.7D1026AC0C45FE2A.idx  test_socket_comm.c.BEE11C8DF04A6A7A.idx  test_sync_buffer.c.F3D5C9EC3C45181C.idx  test_thread_pool.c.26636AB1665D9D87.idx  thread_pool.c.BF3670BD6CDC9E53.idx  thread_pool.h.B84ADBED9E2B1C2B.idx
common/: test_framework.h
docs/: ROADMAP.md  lab01_ring_buffer.md  lab02_command_queue.md  lab03_linked_list_pool.md  lab04_hash_table.md  lab05_fsm.md  lab06_producer_consumer.md  lab07_thread_pool.md  lab08_scheduler.md  lab09_socket_comm.md  lab10_frame_parser.md  lab11_modbus_tcp.md
labs/lab01_ring_buffer/: CMakeLists.txt
labs/lab01_ring_buffer/include/: ring_buffer.h
labs/lab01_ring_buffer/src/: ring_buffer.c
labs/lab01_ring_buffer/test/: test_ring_buffer.c
labs/lab02_command_queue/: CMakeLists.txt
labs/lab02_command_queue/include/: command_queue.h
labs/lab02_command_queue/src/: command_queue.c
labs/lab02_command_queue/test/: test_command_queue.c
labs/lab03_linked_list_pool/: CMakeLists.txt
labs/lab03_linked_list_pool/include/: alarm_list.h
labs/lab03_linked_list_pool/src/: alarm_list.c
labs/lab03_linked_list_pool/test/: test_alarm_list.c
labs/lab04_hash_table/: CMakeLists.txt
labs/lab04_hash_table/include/: hash_table.h
labs/lab04_hash_table/src/: hash_table.c
labs/lab04_hash_table/test/: test_hash_table.c
labs/lab05_fsm/: CMakeLists.txt
labs/lab05_fsm/include/: fsm.h
labs/lab05_fsm/src/: fsm.c
labs/lab05_fsm/test/: test_fsm.c
labs/lab06_producer_consumer/: CMakeLists.txt
labs/lab06_producer_consumer/include/: sync_buffer.h
labs/lab06_producer_consumer/src/: sync_buffer.c
labs/lab06_producer_consumer/test/: test_sync_buffer.c
labs/lab07_thread_pool/: CMakeLists.txt
labs/lab07_thread_pool/include/: thread_pool.h
labs/lab07_thread_pool/src/: thread_pool.c
labs/lab07_thread_pool/test/: test_thread_pool.c
labs/lab08_scheduler/: CMakeLists.txt
labs/lab08_scheduler/include/: scheduler.h
labs/lab08_scheduler/src/: scheduler.c
labs/lab08_scheduler/test/: test_scheduler.c
labs/lab09_socket_comm/: CMakeLists.txt
labs/lab09_socket_comm/include/: socket_comm.h
labs/lab09_socket_comm/src/: socket_comm.c
labs/lab09_socket_comm/test/: test_socket_comm.c
labs/lab10_frame_parser/: CMakeLists.txt
labs/lab10_frame_parser/include/: frame_parser.h
labs/lab10_frame_parser/src/: frame_parser.c
labs/lab10_frame_parser/test/: test_frame_parser.c
labs/lab11_modbus_tcp/: CMakeLists.txt
labs/lab11_modbus_tcp/include/: modbus_slave.h
labs/lab11_modbus_tcp/src/: modbus_slave.c
labs/lab11_modbus_tcp/test/: test_modbus_slave.c
xmake/: labs.lua
